<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Inverter" Id="{1bc7dfbe-c465-43ab-9d3e-fb9ebb68c136}">
    <Declaration><![CDATA[TYPE ST_Inverter :
STRUCT
	bDeviceId : BYTE;
	wStatus	  : WORD;
	eControl  : E_Command;
	rSpeed	  : WORD;
	errorInv  : WORD;           // AVT inverter Error
	errorMdb  : MODBUS_ERRORS;  // Modbus Communications error		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>